--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,49 +9,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
 
-    - name: Deploy to Server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USERNAME }}
-        key: ${{ secrets.SERVER_SSH_KEY }}
-        script: |
-          # Docker Hub ga login
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          
-          # Yangi image ni olish
-          docker pull ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
-          
-          # Eski containerni o'chirish
-          docker stop jwt-app || true
-          docker rm jwt-app || true
-          
-          # YANGI: To'g'ri port va environment bilan ishga tushurish
-          docker run -d \
-            --name jwt-app \
-            -p 5257:5257 \  # ✅ To'g'ri port
-            -e ASPNETCORE_ENVIRONMENT=Development \  # ✅ Development mode
-            -e DOTNET_USE_POLLING_FILE_WATCHER=1 \
-            ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
-          
-          # YANGI: Eski imagelarni tozalash
-          docker image prune -af
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            # Docker Hub ga login
+            echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+            
+            # Yangi image ni olish
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
+            
+            # Eski containerni o'chirish
+            docker stop jwt-app || true
+            docker rm jwt-app || true
+            
+            # Yangi container ishga tushurish
+            docker run -d \
+              --name jwt-app \
+              -p 5257:5257 \
+              -e ASPNETCORE_ENVIRONMENT=Development \
+              -e DOTNET_USE_POLLING_FILE_WATCHER=1 \
+              ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
+            
+            # Eski imagelarni tozalash
+            docker image prune -af
+
