--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/jwt-docker-app:latest
 
       - name: Deploy to Server
-        uses: appleboy/ssh-action@0.1.6
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
